[tool.poetry]
name = "nonebot-plugin-essence-message"
version = "0.1.5"
description = "Used to organize essence messages"
license = "MIT"
authors = ["beis <havaagoodtime@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.32.3"
httpx = "^0.27.0"
nonebot2 = "^2.3.2"
nonebot-adapter-onebot = "^2.4.4"
pydantic = "^2.8.2"
nonebot-plugin-localstore = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"