[tool.poetry]
name = "nonebot-plugin-essence-message"
version = "0.2.2"
description = "Used to organize essence messages"
license = "MIT"
authors = ["beis <havaagoodtime@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
httpx = "^0.27.0"
nonebot2 = "^2.3.2"
nonebot-adapter-onebot = "^2.4.4"
nonebot-plugin-localstore = "^0.7.1"
nonebot-plugin-alconna = "^0.51.1"
aiosqlite = "^0.20.0"


[tool.nonebot]
plugins = []
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"